# harmonist

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/changelog/: SKILL.md
.claude/skills/review-gate/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: design.md  manual-tests.md
scripts/: slug_match_dryrun.py
src/harmonist/: activity.py  audit.py  bandcamp_hook.py  bandcamp_scraper.py  bootstrap.py  config.py  cover_art.py  demo.py  id_registry.py  library_index.py  live_counts.py  match.py  mb_lookup.py  mb_search.py  mb_searcher.py  metadata.py  models.py  pending_downloads.py  reconcile.py  scanner.py  setup_demo.py  sidecar.py  syncer.py  tagger.py  url_recovery.py
src/harmonist/formats/: __init__.py  _vorbis.py  flac.py  m4a.py  mp3.py  ogg.py  opus.py  types.py
src/harmonist/web/: dir_watcher.py  main.py  reconcile_runner.py  scan_runner.py  security.py  sync_runner.py
src/harmonist/web/templates/: index.html
static/: harmonist.css  input.css
templates/: about.html  base.html  header.html  index.html  macros.html  settings.html  task_list.html  tasks.html
templates/partials/: _album_header.html  _links.html  _manual_form.html  _mbid_paste.html  _name_search.html  _needs_mbid_tools.html  _pending.html  _pending_card.html  _pending_match.html  _pending_match_results.html  _surrender_tools.html  _tagging_overlay.html  _track_comparison.html  activity.html  bandcamp_setup_modal.html  demo_banner.html  library_compare.html  library_detail.html  library_detail_modal.html  library_page.html  library_row.html  library_tile.html  manual_search_results.html  task_card_ambiguity.html  task_card_held_bandcamp.html  task_card_held_manual.html  task_card_inconsistent.html  task_card_needs_confirmation.html  task_card_needs_mbid.html  task_card_needs_review.html  task_card_needs_sync.html  task_card_new.html  task_card_orphan.html  task_card_seeding.html  task_card_tagging.html  task_card_unconfirmed_bandcamp.html  verify_seeding.html
test/: conftest.py  test_audit.py  test_bandcamp_hook.py  test_bootstrap.py  test_cover_art.py  test_demo.py  test_dir_watcher.py  test_flagship.py  test_formats.py  test_foundations.py  test_library_index.py  test_live_counts.py  test_match.py  test_mb_lookup.py  test_mb_search.py  test_pending_downloads.py  test_picard_spec.py  test_reconcile.py  test_reconcile_runner.py  test_scan_runner.py  test_scanner.py  test_security.py  test_store_url_for_tagging.py  test_store_url_recovery_safety_net.py  test_tagger.py  test_title_match.py  test_url_recovery.py  test_web.py  test_workflow.py
test/fixtures/: sine.flac  sine.m4a  sine.opus
