[project]
name = "harmonist"
version = "1.0.0"
requires-python = ">=3.12"
# bandcampsync 0.8 reshaped Syncer.__init__ to take a BandcampSyncOptions
# object (+ auto_run); HarmonistSyncer adapts to it in bandcamp_hook.py.
dependencies = ["mutagen", "bandcampsync~=0.8.0", "fastapi", "jinja2", "httpx", "musicbrainzngs", "pydantic", "python-multipart", "tomlkit", "uvicorn[standard]", "watchfiles"]

[project.optional-dependencies]
# ruff + mypy are pinned exactly: an unpinned formatter/linter drifts between
# a dev machine and CI (a patch bump reformats code), which fails the format
# check on a green-locally branch. Bump deliberately, like TAILWINDCSS_VERSION.
dev = ["pytest", "pytest-mock", "pytailwindcss", "ruff==0.15.22", "mypy==2.3.0", "coverage"]

[tool.setuptools.packages]
find = {where = ["src"], include = ["harmonist*"]}

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Ruff — lint + format + idiom enforcement
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "test"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort (import ordering)
    "UP",       # pyupgrade (modern-idiom enforcement)
    "B",        # flake8-bugbear (real-bug patterns)
    "SIM",      # flake8-simplify
    "C4",       # flake8-comprehensions
    "N",        # pep8-naming
    "PT",       # flake8-pytest-style
    "PIE",      # flake8-pie
    "RUF",      # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over some lint niceties.
"test/*" = [
    "N802",  # test helper / fixture names may not be snake_case-pure
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts these calls in argument
# defaults by design (e.g. `f: UploadFile = File(...)`); not a B008 bug.
extend-immutable-calls = [
    "fastapi.File", "fastapi.Form", "fastapi.Query", "fastapi.Path",
    "fastapi.Header", "fastapi.Depends", "fastapi.Body",
]

# ---------------------------------------------------------------------------
# mypy — strict static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "test"]

# Third-party libraries that ship no type information. They're installed,
# so mypy would otherwise *follow* them, discover the untyped defs, and flag
# every call/attribute in our code as no-untyped-call / attr-defined. Skip
# following them entirely so their symbols are treated as Any — the honest
# stance for a dependency we can't type-check anyway.
[[tool.mypy.overrides]]
module = ["mutagen.*", "bandcampsync.*", "musicbrainzngs.*"]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

# Tests: keep type checking for real mistakes (assignment / arg-type /
# return shape), but relax the strictness aimed at production API surface.
# Test bodies legitimately call untyped stub/fixture helpers, build bare
# dict/list literals, and poke Optionals they've just asserted are set —
# enforcing annotations and generics there is noise, not safety. Strictness
# is most valuable on the package itself.
[[tool.mypy.overrides]]
module = ["test.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
# Optionals/attrs in tests are guarded by surrounding asserts the checker
# can't see across helper boundaries.
disable_error_code = ["union-attr", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["test"]
